--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,15 +2,16 @@
     ->html tags ---> name 
     -> .  + class
     -> #  + id
+    -> * browser style and settings?
  
  */
- @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,400&display=swap');
- @import url(https://necolas.github.io/normalize.css/8.0.1/normalize.css);
- 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,400&display=swap');
+@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
 
- body {
-    font-family: 'Heebo', sans-serif;
-    font-family: 'Open Sans', sans-serif;  
- }
+/*    Font : font-family: 'Open Sans', sans-serif;      */
+/* ------------------------------------------------- */
 
-
+.logo{
+    width:90%;
+    height: auto;
+}
