--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,400&display=swap');
 @import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
 
-/*    Font : font-family: 'Open Sans', sans-serif;      */
+/*    Font : 
+font-family: 'Open Sans', sans-serif;
+font-family: 'Ubuntu', sans-serif;    */
+
 /* ------------------------------------------------- */
 
-.logo{
-    width:90%;
-    height: auto;
+body{
+    font-family: 'Open Sans', sans-serif;
+
 }
