--- a/assets/css/modal-login.css
+++ b/assets/css/modal-login.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
-
+/* @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900'); */
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
 body{
-	font-family: 'Poppins', sans-serif;
+	/* font-family: 'Poppins', sans-serif; */
+    font-family: 'Inconsolata', monospace;
 	font-weight: 300;
 	font-size: 15px;
 	line-height: 1.7;
@@ -109,7 +110,7 @@ h6 span{
   width: 100%;
   height: 100%;
   background-color: #2a2b38;
-  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
+  /* background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg'); */
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: 300%;
