--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,16 +5,114 @@
     -> * browser style and settings?
  
  */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,400&display=swap');
-@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
 
-/*    Font : 
+ /*    Font : 
 font-family: 'Open Sans', sans-serif;
 font-family: 'Ubuntu', sans-serif;    */
 
+/* colours 
+  color: #009188; */
+
 /* ------------------------------------------------- */
+@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
+
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
 
 body{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Inconsolata', monospace;
+	background-color: #1f2029;
+    color: white;;
+}
+#container{
 
 }
+.col-1{
+    
+}
+
+a {
+	cursor: pointer;
+  transition: all 200ms linear;
+}
+a:hover {
+	text-decoration: none;
+}
+.link {
+  color: #c4c3ca;
+}
+.link:hover {
+  color: #009188;
+}
+p {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.7;
+}
+h1 span{
+    padding: 0 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+h4 {
+  font-weight: 600;
+}
+h6 span{
+  padding: 0 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.btn{  
+    border-radius: 4px;
+    height: 44px;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    -webkit-transition : all 200ms linear;
+    transition: all 200ms linear;
+    padding: 0 30px;
+    letter-spacing: 1px;
+    display: inline-flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    text-align: center;
+    border: none;
+    background-color: #009188;
+    color: #ffffff;
+    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+  }
+  .btn:active,
+  .btn:focus{  
+    background-color: #ffffff;
+    color:#009188;
+    box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  }
+  .btn:hover{  
+    background-color: #ffffff;
+    color: #009188;
+    box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  }
+  .logo{  
+    height: 55px;
+    background-color:transparent;
+  }
+
+  .navbar-toggler{  
+    border-radius: 4px;
+    height: 44px;
+    -webkit-transition : all 200ms linear;
+    transition: all 200ms linear;
+    padding: 0 30px;
+    -ms-flex-pack: center;
+    border: none;
+    background-color: #009188;
+    color: transparent;
+    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+  }
