--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -11,14 +11,15 @@ body{
 /* The sidebar menu */
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
+    width: 5%; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: #111; /* Black */
+    background-color: black; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
+
   }
   
   /* The navigation menu links */
@@ -37,7 +38,7 @@ body{
   
   /* Style page content */
   .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
+    margin-left: 10%; /* Same as the width of the sidebar */
     padding: 0px 10px;
   }
   
