--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ font-family: 'Ubuntu', sans-serif;    */
   --fs-h2: 2.25rem;
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
+  
 
 }
 
@@ -151,6 +152,7 @@ h6 span{
   }
 
   .btn:active,
+  /* active not working */
   .btn:focus{  
     background-color: #ffffff;
     color:#009188;
