--- a/portfolio-front/src/app/app.component.html
+++ b/portfolio-front/src/app/app.component.html
@@ -5,11 +5,11 @@
 <!-- poner en orden todos los selectores  editar si es necesario-->
 <!-- selector = clase de la seccion (identico) -->
 <app-navbar></app-navbar>
-<app-page-navigation></app-page-navigation>
+<app-navigation></app-navigation>
 <app-banner></app-banner>
 <app-introduction></app-introduction>
-<app-about-me></app-about-me>
-<app-my-experience></app-my-experience>
-<app-my-education></app-my-education>
-<app-my-skills></app-my-skills>
-<app-my-projects></app-my-projects>
+<app-about></app-about>
+<app-experience></app-experience>
+<app-education></app-education>
+<app-skills></app-skills>
+<app-projects></app-projects>
