--- a/portfolio-front/src/app/components/experience/experience.component.html
+++ b/portfolio-front/src/app/components/experience/experience.component.html
@@ -1,1 +1,39 @@
-<p>experience works!</p>
+<section class="my-experience" id="experience">
+    <h2 class="section__title section__title--experience">
+      <strong> &lt experiencia &gt </strong>
+    </h2>
+    <div class="experience">
+      <div class="job">
+        <h3>
+          <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 1
+        </h3>
+
+        <p>descripcion trabajo 1</p>
+        <p class="project__date">fecha trabajo 1</p>
+      </div>
+
+      <!-- trabajo 1-->
+
+      <div class="job">
+        <h3>
+          <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 2
+        </h3>
+        <p>descripcion trabajo 2</p>
+        <p class="project__date">fecha trabajo 2</p>
+      </div>
+      <!-- trabajo 2-->
+
+      <div class="job">
+        <h3>
+          <span><i class="fa-solid fa-at icon-body"></i></span> Trabajo 3
+        </h3>
+        <p>descripcion trabajo 3</p>
+        <p class="project__date">fecha trabajo 3</p>
+      </div>
+
+      <!-- trabajo 3-->
+    </div>
+    <div class="my-experience__footer">
+      <h2>&lt / <i class="fa-solid fa-briefcase icon-body"></i> &gt</h2>
+    </div>
+  </section>
