--- a/portfolio-front/src/app/components/navigation/navigation.component.html
+++ b/portfolio-front/src/app/components/navigation/navigation.component.html
@@ -1,1 +1,46 @@
-<p>navigation works!</p>
+<section class="page-navigation">
+    <div class="flex-container">
+      <div class="menu-item">
+        <a href="#home" class="menu__link">
+          <span class="menu-number"><strong>01.</strong></span
+          >&lt inicio &gt</a
+        >
+      </div>
+
+      <div class="menu-item">
+        <a href="#about" class="menu__link">
+          <span class="menu-number"><strong>02.</strong></span
+          >&lt acerca de mi &gt</a
+        >
+      </div>
+
+      <div class="menu-item">
+        <a href="#experience" class="menu__link">
+          <span class="menu-number"><strong>03.</strong></span
+          >&lt experiencia &gt</a
+        >
+      </div>
+
+      <div class="menu-item">
+        <a href="#education" class="menu__link">
+          <span class="menu-number"><strong>04.</strong></span
+          >&lt formación academica &gt</a
+        >
+      </div>
+
+      <div class="menu-item">
+        <a href="#skills" class="menu__link">
+          <span class="menu-number"><strong>05.</strong></span
+          >&lt habilidades &gt</a
+        >
+      </div>
+
+      <div class="menu-item">
+        <a href="#projects" class="menu__link">
+          <span class="menu-number"><strong>06.</strong></span
+          >&lt proyectos &gt</a
+        >
+      </div>
+    </div>
+  </section>
+
