--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -1,1 +1,13 @@
-<p>about works!</p>
+<section class="about-me" id="about">
+    <h2 class="section__title section__title--about">
+      <strong> &lt sobre mi &gt </strong>
+    </h2>
+    <p class="section__subtitle section__subtitle--about"></p>
+    <div class="about-me__body">
+      <!-- componente de about-me -->
+      <h3><p>Aaaaaaaa ...................................</p></h3>
+    </div>
+    <div class="about-me__footer">
+      <h2>&lt / <i class="fa-solid fa-circle-info icon-body"></i> &gt</h2>
+    </div>
+  </section>
