--- a/portfolio-front/src/app/components/education/education.component.html
+++ b/portfolio-front/src/app/components/education/education.component.html
@@ -1,1 +1,44 @@
-<p>education works!</p>
+<section class="my-education" id="education">
+    <h2 class="section__title section__title--education">
+      <strong> &lt formación académica &gt </strong>
+    </h2>
+    <div class="education">
+      <div class="course">
+        <i class="fa-solid fa-bookmark icon-body"></i>
+        <h3 class="titulo">
+          NOMBRE de la carrira, titulo o certificacion
+
+          <p class="institution">nombre de la institucion</p>
+          <p class="project__date">fecha o duracion de la educacion</p>
+          <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
+        </h3>
+      </div>
+      <!-- titulo 1 -->
+
+      <div class="course">
+        <i class="fa-solid fa-bookmark icon-body"></i>
+        <h3 class="titulo">
+          NOMBRE de la carrira, titulo o certificacion
+
+          <p class="institution">nombre de la institucion</p>
+          <p class="project__date">fecha o duracion de la educacion</p>
+          <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
+        </h3>
+      </div>
+      <!-- titulo 1 -->
+      <div class="course">
+        <i class="fa-solid fa-bookmark icon-body"></i>
+        <h3 class="titulo">
+          NOMBRE de la carrira, titulo o certificacion
+
+          <p class="institution">nombre de la institucion</p>
+          <p class="project__date">fecha o duracion de la educacion</p>
+        </h3>
+      </div>
+      <!-- titulo 1 -->
+    </div>
+
+    <div class="my-education__footer">
+      <h2>&lt / <i class="fa-solid fa-user-graduate icon-body"></i> &gt</h2>
+    </div>
+  </section>
