--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -1,1 +1,23 @@
-<p>introduction works!</p>
+<section class="introduction" id="home">
+    <!-- left side -->
+    <div class="left">
+      <h1 class="section__title section__title--intro">Hola, me llamo</h1>
+      <h1 class="section__title section__title--intro">
+        <strong>Hebe Lia Romeu</strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">
+        <i> full stack developer junior </i>
+      </p>
+    </div>
+    <!-- profile picture -->
+
+    <!-- right side -->
+    <div class="right">
+      <img src="assets/img/pfp.jpg" alt="pfp" class="intro__img" />
+
+      <!-- ICON -->
+      <h1>
+        <i class="fa-solid fa-laptop-code icon-body introduction__icon"></i>
+      </h1>
+    </div>
+  </section>
