--- a/portfolio-front/src/app/components/navbar/navbar.component.html
+++ b/portfolio-front/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,11 @@
         <button class="btn btn-primary" type="button">Cerrar Sesión</button>
         <button class="btn btn-primary" type="button">
           <a
-            style="color: #009188; text-decoration: none; text-align: center"
+            style="
+              color: #009188;
+              text-decoration: none;
+              text-align: center;
+            "
             href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
             alt="linkedin"
             target="_blank"
@@ -42,7 +46,11 @@
         </button>
         <button class="btn btn btn-primary" type="button">
           <a
-            style="color: #009188; text-decoration: none; text-align: center"
+            style="
+              color: #009188;
+              text-decoration: none;
+              text-align: center;
+            "
             href="https://github.com/hebelia"
             target="_blank"
             ><i class="fa-brands fa-github-alt"></i
@@ -50,7 +58,11 @@
         </button>
         <button class="btn btn btn-primary" type="button">
           <a
-            style="color: #009188; text-decoration: none; text-align: center"
+            style="
+              color: #009188;
+              text-decoration: none;
+              text-align: center;
+            "
             href="https://codepen.io/hebelia"
             target="_blank"
             ><i class="fa-brands fa-codepen"></i>
@@ -58,7 +70,11 @@
         </button>
         <button class="btn btn btn-primary" type="button">
           <a
-            style="color: #009188; text-decoration: none; text-align: center"
+            style="
+              color: #009188;
+              text-decoration: none;
+              text-align: center;
+            "
             href="https://www.instagram.com/hebe.lia/"
             target="_blank"
             ><i class="fa-brands fa-instagram"></i>
