--- a/portfolio-front/src/app/app.component.html
+++ b/portfolio-front/src/app/app.component.html
@@ -5,7 +5,6 @@
 <!-- poner en orden todos los selectores  editar si es necesario-->
 <!-- selector = clase de la seccion (identico) -->
 
-
 <app-navbar></app-navbar>
 <app-navigation></app-navigation>
 <app-banner></app-banner>
@@ -14,5 +13,6 @@
 <app-experience></app-experience>
 <app-education></app-education>
 <app-skills></app-skills>
-<app-projects></app-projects> 
-
+<app-projects></app-projects>
+<app-footer></app-footer>
+<app-page404></app-page404>
