--- a/portfolio-front/src/app/components/navbar/navbar.component.html
+++ b/portfolio-front/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-transparent">
+<nav id="return" class="navbar navbar-expand-lg bg-transparent">
   <div class="container-fluid">
     <a><img class="logo" src="assets/img/logo.png" alt="logoArgProg" /></a>
     <button
