--- a/portfolio-front/src/app/components/page404/page404.component.html
+++ b/portfolio-front/src/app/components/page404/page404.component.html
@@ -1,1 +1,26 @@
-<p>page404 works!</p>
+<!-- pagina de error a completar :D -->
+
+
+
+<!-- 
+<section class="page404">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="col-sm-10 col-sm-offset-1 text-center">
+          <div class="four_zero_four_bg">
+            <h1 class="text-center">404</h1>
+          </div>
+
+          <div class="contant_box_404">
+            <h3 class="h2">Look like you're lost</h3>
+
+            <p>the page you are looking for not avaible!</p>
+
+            <a href="#return" class="link_404"> &lt return home &gt </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
