--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -1,5 +1,3 @@
 <section class="footer">
-
-<a href="#return"> &lt back to top &gt </a>
-
+  <a href="#return"> &lt; back to top &gt; </a>
 </section>
