--- a/portfolio-front/src/app/app.component.html
+++ b/portfolio-front/src/app/app.component.html
@@ -5,14 +5,11 @@
 <!-- poner en orden todos los selectores  editar si es necesario-->
 <!-- selector = clase de la seccion (identico) -->
 
-<app-navbar></app-navbar>
-<app-navigation></app-navigation>
-<app-banner></app-banner>
-<app-introduction></app-introduction>
-<app-about></app-about>
-<app-experience></app-experience>
-<app-education></app-education>
-<app-skills></app-skills>
-<app-projects></app-projects>
-<app-footer></app-footer>
+<!-- 
+    VER DONDE VAN ESTOS
+
 <app-page404></app-page404>
+
+<app-login></ap-login> 
+
+    -->
