--- a/portfolio-front/src/app/components/page404/page404.component.html
+++ b/portfolio-front/src/app/components/page404/page404.component.html
@@ -1,26 +1,30 @@
 <!-- pagina de error a completar :D -->
 
-
-
-<!-- 
 <section class="page404">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
         <div class="col-sm-10 col-sm-offset-1 text-center">
           <div class="four_zero_four_bg">
-            <h1 class="text-center">404</h1>
+            <h1 class="text-center"> &lt; 404 &gt;</h1>
           </div>
 
           <div class="contant_box_404">
-            <h3 class="h2">Look like you're lost</h3>
+            <h3 class="h2">parece que te perdiste <img class=" justify-content-center animate__animated animate__bounce animate__delay-2s animate__infinite" src="./../../../assets/img/1034877663510265937.gif"> </h3>
 
-            <p>the page you are looking for not avaible!</p>
+            <p>la página que buscas no existe</p>
 
-            <a href="#return" class="link_404"> &lt return home &gt </a>
+<!-- fix this  -->
+            <button
+              class="btn"
+              type="button"
+              name="return home"
+              routerLink="/"
+            > &lt; return home &gt;  </button>
+            <!-- router link para volver a pagina principal -->
           </div>
         </div>
       </div>
     </div>
   </div>
-</section> -->
+</section>
