--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <section class="footer">
-  <a href="#return"> &lt; back to top &gt; </a>
+  <button class="btn">
+    <a style="text-decoration: none" href="#return"> &lt; back to top &gt; </a>
+  </button>
 </section>
