--- a/portfolio-front/src/app/components/login/login.component.html
+++ b/portfolio-front/src/app/components/login/login.component.html
@@ -1,3 +1,5 @@
+<!-- BOTON DE LOGIN QUE VA A LLAMAR A UN MODAL O PAGINA CON TODO EL CODIGO DE ABAJO -->
+
 <section class="login-modal">
   <div class="section">
     <div class="container">
