--- a/portfolio-front/src/app/components/navigation/navigation.component.html
+++ b/portfolio-front/src/app/components/navigation/navigation.component.html
@@ -23,8 +23,8 @@
 
     <div class="menu-item">
       <a href="#education" class="menu__link">
-        <span class="menu-number"><strong>04.</strong></span> &lt; formación
-        academica &gt;</a
+        <span class="menu-number"><strong>04.</strong></span
+        >&lt; formación academica &gt;</a
       >
     </div>
 
