--- a/portfolio-front/src/app/components/skills/skills.component.html
+++ b/portfolio-front/src/app/components/skills/skills.component.html
@@ -1,1 +1,13 @@
 <!-- completarrrrrrrrrrrrrrrrrrr -->
+
+<section class="my-skills" id="skills">
+  <h2 class="section__title section__title--skills">
+    <strong> &lt; mis habilidades &gt; </strong>
+  </h2>
+
+  <div class="skills"></div>
+
+  <div class="my-skills__footer">
+    <h2>&lt; / <i class="fa-solid fa-shapes icon-body"></i> &gt;</h2>
+  </div>
+</section>
