--- a/portfolio-front/src/app/components/navbar/navbar.component.html
+++ b/portfolio-front/src/app/components/navbar/navbar.component.html
@@ -20,25 +20,18 @@
       <div
         class="d-grid gap-2 d-md-flex justify-content-center flex-row-reverse"
       >
-        <!-- MAKE THIS TOGGLE A MODAL SOMEHOW -->
-        <button
-          class="btn btn-primary"
-          type="button"
-          data-bs-target="modal"
-          data-bs-toggle="loginModal"
-          
-        >
-          <!-- change toggle modal to ...????????? -->
-          Iniciar Sesión
-        </button>
-        <button class="btn btn-primary" type="button">Cerrar Sesión</button>
+        <!-- login button component -->
+
+        <app-login></app-login>
+
+        <app-logout></app-logout>
+
+        <!-- ---------------- -->
+
+        <!-- social links -->
         <button class="btn btn-primary" type="button">
           <a
-            style="
-              color: #009188;
-              text-decoration: none;
-              text-align: center;
-            "
+            style="color: #009188; text-decoration: none; text-align: center"
             href="https://www.linkedin.com/in/hebe-lia-romeu-0a5343234/"
             alt="linkedin"
             target="_blank"
@@ -47,11 +40,7 @@
         </button>
         <button class="btn btn btn-primary" type="button">
           <a
-            style="
-              color: #009188;
-              text-decoration: none;
-              text-align: center;
-            "
+            style="color: #009188; text-decoration: none; text-align: center"
             href="https://github.com/hebelia"
             target="_blank"
             ><i class="fa-brands fa-github-alt"></i
@@ -59,11 +48,7 @@
         </button>
         <button class="btn btn btn-primary" type="button">
           <a
-            style="
-              color: #009188;
-              text-decoration: none;
-              text-align: center;
-            "
+            style="color: #009188; text-decoration: none; text-align: center"
             href="https://codepen.io/hebelia"
             target="_blank"
             ><i class="fa-brands fa-codepen"></i>
@@ -71,11 +56,7 @@
         </button>
         <button class="btn btn btn-primary" type="button">
           <a
-            style="
-              color: #009188;
-              text-decoration: none;
-              text-align: center;
-            "
+            style="color: #009188; text-decoration: none; text-align: center"
             href="https://www.instagram.com/hebe.lia/"
             target="_blank"
             ><i class="fa-brands fa-instagram"></i>
