--- a/portfolio-front/src/app/components/education/education.component.html
+++ b/portfolio-front/src/app/components/education/education.component.html
@@ -12,7 +12,18 @@
         <p class="project__date">fecha o duracion de la educacion</p>
         <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
       </h3>
+      <!-- edit button -->
+      <div class="col-1 admin-btn">
+        <button type="button" class="btn edit-btn">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+        </button>
+        <button type="button" class="btn del-btn">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </div>
     </div>
+
+
     <!-- titulo 1 -->
 
     <div class="course">
@@ -24,6 +35,14 @@
         <p class="project__date">fecha o duracion de la educacion</p>
         <!-- modal con seleccion de la fecha de inicio y finalizacion? -->
       </h3>
+      <div class="col-1 admin-btn">
+        <button type="button" class="btn edit-btn">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+        </button>
+        <button type="button" class="btn del-btn">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </div>
     </div>
     <!-- titulo 1 -->
     <div class="course">
@@ -34,6 +53,14 @@
         <p class="institution">nombre de la institucion</p>
         <p class="project__date">fecha o duracion de la educacion</p>
       </h3>
+      <div class="col-1 admin-btn">
+        <button type="button" class="btn edit-btn">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+        </button>
+        <button type="button" class="btn del-btn">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </div>
     </div>
     <!-- titulo 1 -->
   </div>
