--- a/portfolio-front/src/app/components/navbar/navbar.component.html
+++ b/portfolio-front/src/app/components/navbar/navbar.component.html
@@ -22,8 +22,10 @@
       >
         <!-- login button component -->
 
+        <!-- make it appear and disappear
+        <app-login *ngIf="!visible"></app-login>
+        <app-logout *ngIf="visible"></app-logout> -->
         <app-login></app-login>
-
         <app-logout></app-logout>
 
         <!-- ---------------- -->
