--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -6,7 +6,20 @@
   <div class="about-me__body">
     <!-- componente de about-me -->
     <h3><p>Aaaaaaaa ...................................</p></h3>
+    
+  <!-- change -->
+  <div class="col-1 admin-btn">
+    <button type="button" class="btn edit-btn">
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+    </button>
+    <button type="button" class="btn del-btn">
+      <i class="fa-solid fa-trash-can"></i>
+    </button>
   </div>
+  </div>
+
+
+
   <div class="about-me__footer">
     <h2>&lt; / <i class="fa-solid fa-circle-info icon-body"></i> &gt;</h2>
   </div>
