--- a/portfolio-front/src/app/components/banner/banner.component.html
+++ b/portfolio-front/src/app/components/banner/banner.component.html
@@ -1,3 +1,13 @@
 <section class="banner p-0">
+  <div>
     <img class="card-img" src="/assets/img/a4.png" alt="banner" />
+  </div>
+  <div class="col-1 admin-btn">
+    <button type="button" class="btn edit-btn">
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+    </button>
+    <button type="button" class="btn del-btn">
+      <i class="fa-solid fa-trash-can"></i>
+    </button>
+  </div>
 </section>
