tercerizacion del css ._.

--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -5,7 +5,10 @@
   <p class="section__subtitle section__subtitle--about"></p>
   <div class="about-me__body">
     <!-- componente de about-me -->
-    <h3><p>Aaaaaaaa ...................................</p></h3>
+    <div class="col-7  p-1">
+      <p class="p-1"> ...............................................................................................................
+      ........................................................</p>
+    </div>
     
   <!-- change -->
   <div class="col-1 admin-btn">
