--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -1,24 +1,36 @@
 <section class="introduction" id="home">
-    <!-- left side -->
-    <div class="left">
-      <h1 class="section__title section__title--intro">Hola, me llamo</h1>
-      <h1 class="section__title section__title--intro">
-        <strong>Hebe Lia Romeu</strong>
-      </h1>
-      <p class="section__subtitle section__subtitle--intro">
-        <i> full stack developer junior </i>
-      </p>
-    </div>
-    <!-- profile picture -->
+  <!-- left side -->
+  <div class="left">
+    <h1 class="section__title section__title--intro">Hola, me llamo</h1>
+    <h1 class="section__title section__title--intro">
+      <strong>Hebe Lia Romeu</strong>
+    </h1>
+    <p class="section__subtitle section__subtitle--intro">
+      <i> full stack developer junior </i>
+    </p>
+  </div>
+  <!-- profile picture -->
 
-    <!-- right side -->
-    <div class="right">
-      <img src="assets/img/pfp.jpg" alt="pfp" class="intro__img" />
-
-      <!-- ICON -->
+  <!-- right side -->
+  <div class="right">
+    <img src="assets/img/pfp.jpg" alt="pfp" class="intro__img" />
+    <div class="right-bottom">
       <h1>
         <i class="fa-solid fa-laptop-code icon-body introduction__icon"></i>
       </h1>
+      <!-- change -->
+      <div class="col-1 admin-btn">
+        <button type="button" class="btn edit-btn">
+          <i class="fa-solid fa-wand-magic-sparkles"></i>
+        </button>
+        <button type="button" class="btn del-btn">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </div>
+
     </div>
-    
-  </section>
+
+    <!-- ICON -->
+
+  </div>
+</section>
