--- a/portfolio-front/src/app/components/skills/skills.component.html
+++ b/portfolio-front/src/app/components/skills/skills.component.html
@@ -5,7 +5,24 @@
     <strong> &lt; mis habilidades &gt; </strong>
   </h2>
 
-  <div class="skills"></div>
+  <div class="skills">
+
+    <div class="skill">
+      <div class="skill__percentage">
+      
+      </div>
+      <!-- admin button -->
+      <div class="col-1 admin-btn">
+        <button type="button" class="btn edit-btn">
+          <i class="fa-solid fa-wand-magic-sparkles"></i>
+        </button>
+        <button type="button" class="btn del-btn">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </div>
+    </div>
+    <!-- ---- -->
+  </div>
 
   <div class="my-skills__footer">
     <h2>&lt; / <i class="fa-solid fa-shapes icon-body"></i> &gt;</h2>
