--- a/portfolio-front/src/app/components/experience/experience.component.html
+++ b/portfolio-front/src/app/components/experience/experience.component.html
@@ -10,6 +10,15 @@
 
       <p>descripcion trabajo 1</p>
       <p class="project__date">fecha trabajo 1</p>
+
+      <div class="col-1 admin-btn">
+        <button type="button" class="btn edit-btn">
+          <i class="fa-solid fa-wand-magic-sparkles"></i>
+        </button>
+        <button type="button" class="btn del-btn">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </div>
     </div>
 
     <!-- trabajo 1-->
