--- a/portfolio-front/src/app/components/projects/projects.component.html
+++ b/portfolio-front/src/app/components/projects/projects.component.html
@@ -1,39 +1,51 @@
 <section class="my-projects" id="projects">
-    <h2 class="section__title section__title--projects">
-      <strong> &lt; mis proyectos &gt; </strong>
-    </h2>
-    <div class="projects flex-container">
-      <div class="project">
+  <h2 class="section__title section__title--projects">
+    <strong> &lt; mis proyectos &gt; </strong>
+  </h2>
+  <div class="projects flex-container">
+    <div class="project">
+      <div class="button-icon">
         <h2><i class="fa-regular fa-folder icon-body"></i></h2>
-        <h3>
-          Proyecto1
-  
-          <p>descripcion proyecto 1</p>
-          <p class="project__date">fecha proyecto 1</p>
-        </h3>
+        <!-- button div -->
+        <div class="col-1 admin-btn">
+          <button type="button" class="btn edit-btn">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+          </button>
+          <button type="button" class="btn del-btn">
+            <i class="fa-solid fa-trash-can"></i>
+          </button>
+        </div>
       </div>
-      <!-- proyecto 1-->
-      <div class="project">
-        <h2><i class="fa-regular fa-folder icon-body"></i></h2>
-        <h3>
-          Proyecto2
-          <p>descripcion proyecto 2</p>
-          <p class="project__date">fecha proyecto 2</p>
-        </h3>
-      </div>
-      <!-- proyecto 2-->
-      <div class="project">
-        <h2><i class="fa-regular fa-folder icon-body"></i></h2>
-        <h3>
-          Proyecto3
-          <p>descripcion proyecto 3</p>
-          <p class="project__date">fecha proyecto 3</p>
-        </h3>
-      </div>
-      <!-- proyecto 3-->
+
+      <h3>
+        Proyecto1
+
+        <p>descripcion proyecto 1</p>
+        <p class="project__date">fecha proyecto 1</p>
+      </h3>
     </div>
-  
-    <div class="my-projects__footer">
-      <h2>&lt; / <i class="fa-solid fa-list-check icon-body"></i> &gt;</h2>
+    <!-- proyecto 1-->
+    <div class="project">
+      <h2><i class="fa-regular fa-folder icon-body"></i></h2>
+      <h3>
+        Proyecto2
+        <p>descripcion proyecto 2</p>
+        <p class="project__date">fecha proyecto 2</p>
+      </h3>
     </div>
-  </section>
+    <!-- proyecto 2-->
+    <div class="project">
+      <h2><i class="fa-regular fa-folder icon-body"></i></h2>
+      <h3>
+        Proyecto3
+        <p>descripcion proyecto 3</p>
+        <p class="project__date">fecha proyecto 3</p>
+      </h3>
+    </div>
+    <!-- proyecto 3-->
+  </div>
+
+  <div class="my-projects__footer">
+    <h2>&lt; / <i class="fa-solid fa-list-check icon-body"></i> &gt;</h2>
+  </div>
+</section>
