dashboard for login and register

--- a/portfolio-front/src/app/components/login/login.component.html
+++ b/portfolio-front/src/app/components/login/login.component.html
@@ -1,16 +1,12 @@
 <!-- BOTON DE LOGIN QUE VA A LLAMAR A UN MODAL O PAGINA CON TODO EL CODIGO DE ABAJO -->
 
 <button
-class="btn btn-primary"
-type="button"
-data-bs-toggle="modal"
-data-bs-target="#loginModal"
-
+  class="btn btn-primary"
+  type="button"
+  [routerLink]="['/loginmodal']"
+  routerLinkActive="router-link-active"
 >
-<!-- change toggle modal to ...????????? -->
-Iniciar Sesión
+  <!-- agregar un router link hacer la ruta del formulario del login -->
+  <!-- change toggle modal to ...????????? -->
+  Iniciar Sesión
 </button>
-
-<!-- <app-loginmodal></app-loginmodal> -->
-
-
