--- a/portfolio-front/src/app/modals/loginmodal/loginmodal.component.css
+++ b/portfolio-front/src/app/modals/loginmodal/loginmodal.component.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
 
-body{
+.modal{
     font-family: 'Inconsolata', monospace;
 	font-weight: 300;
 	font-size: 15px;
@@ -231,7 +231,7 @@ h6 span{
 }
 
 .btn{  
-  border-radius: 2rem; 
+  border-radius: 2rem; /* alt 4px*/
   height: 44px;
   font-size: 13px;
   font-weight: 600;
