--- a/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
+++ b/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
@@ -1,8 +1,16 @@
 <!-- review  -->
 
-<section class="login-modal">
-  <div class="section">
+
+
+
+ <div class="section" id="loginModal">
+  <button type="button " class="btn btn-close" routerLink="/" >
+        
+  </button>
+
+
     <div class="container">
+
       <div class="row full-height justify-content-center">
         <div class="col-12 text-center align-self-center py-5">
           <div class="section pb-5 pt-5 pt-sm-2 text-center">
@@ -89,6 +97,8 @@
                         <i class="input-icon uil uil-lock-alt"></i>
                       </div>
                       <a href="#" class="btn mt-4">continuar</a>
+
+                      
                     </div>
                   </div>
                 </div>
@@ -99,4 +109,4 @@
       </div>
     </div>
   </div>
-</section>
+  
