--- a/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
+++ b/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
@@ -4,7 +4,7 @@
 
 
  <div class="section" id="loginModal">
-  <button type="button " class="btn btn-close" routerLink="/" >
+  <button type="button " class="btn-close btn-close-white" routerLink="/" >
         
   </button>
 
