--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -20,10 +20,21 @@
       </h1>
       <!-- change -->
       <div class="col-1 admin-btn">
-        <button type="button" class="btn edit-btn">
+        <!-- edit -modal trigger button -->
+        <button
+          type="button"
+          class="btn edit-btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#editpfp"
+        >
           <i class="fa-solid fa-wand-magic-sparkles"></i>
         </button>
-        <button type="button" class="btn del-btn">
+    
+    
+        <!--del- modal trigger button -->
+    
+        <button type="button" class="btn del-btn"data-bs-toggle="modal"
+        data-bs-target="#delete">
           <i class="fa-solid fa-trash-can"></i>
         </button>
       </div>
@@ -34,3 +45,6 @@
 
   </div>
 </section>
+
+<app-editpfp></app-editpfp>
+<app-delete></app-delete>
